--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -10,13 +10,23 @@
     --secondary-color: green;
     --link-color: #414141;
     --hover-color: black;
+    --text-color: black;
  } 
+
+body {
+	color: var(--primary-color);
+	background-color: var(--secondary-color);
+}
 
 a {
   color: var(--link-color);
 }
 a:hover {
   color: var(--hover-color);
+}
+
+h2, h3 {
+  color: var(--text-color);
 }
 
 .walkthrough a {
@@ -29,6 +39,8 @@ a:hover {
 
 .card {
   --bs-card-border-width: 0px;
+  color: var(--text-color);
+  background-color: var(--secondary-color);
   border-width: 0px 0px 0px 0px;
 }
 
@@ -53,6 +65,10 @@ a:hover {
   background-color: var(--primary-color);
 }
 
+.nav-link {
+  color: var(--text-color);
+}
+
 .nav-pills .nav-link.active {
     background-color: var(--secondary-color);
     color: #ffffff;
@@ -61,17 +77,17 @@ a:hover {
 }
 
 .btn-success {
-  --bs-btn-bg: var(--primary-color);
-  --bs-btn-border-color: var(--primary-color);
-  --bs-btn-hover-bg: var(--secondary-color);
-  --bs-btn-hover-border-color: var(--secondary-color);
+  --bs-btn-bg: black;
+  --bs-btn-border-color: black;
+  --bs-btn-hover-bg: var(--primary-color);
+  --bs-btn-hover-border-color: var(--primary-color);
 }
 
 .btn-outline-success {
-  --bs-btn-color: var(--secondary-color);
-  --bs-btn-border-color: var(--secondary-color);
-  --bs-btn-hover-bg: var(--secondary-color);
-  --bs-btn-hover-border-color: var(--secondary-color);
+  --bs-btn-color: black;
+  --bs-btn-border-color: black;
+  --bs-btn-hover-bg: var(--primary-color);
+  --bs-btn-hover-border-color: var(--primary-color);
 }
 
 .btn-primary {
@@ -100,7 +116,7 @@ a:hover {
   display: inline-block;
   border-top: 15px solid var(--theme-primary);
   border-bottom: 15px solid var(--theme-secondary);
-  border-right: 0;
+  border-right: 15px solid var(--theme-text);
   border-left: 0;
   padding: 0;
   box-shadow: 0 0 3px gray;
@@ -127,20 +143,6 @@ a:hover {
   /*the container must be positioned relative:*/
   position: relative;
   display: inline-block;
-}
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
 }
 .autocomplete-items {
   position: absolute;
