--- a/app/templates/settings/index.html
+++ b/app/templates/settings/index.html
@@ -25,10 +25,8 @@ SPDX-License-Identifier: AGPL-3.0-only
 	      <div class="card-header text-center"><b>{{gettext("Color scheme")}}</b></div>
           <div class="card-body">
 		  <p>{{gettext("Change your color scheme by clicking on the options below.")}}</p>
-	    <button type="button" class="submit-color-button" style="--theme-primary:orange; --theme-secondary:green;" id="orange"></button>
-            <button type="button" class="submit-color-button active" style="--theme-primary:#2196F3; --theme-secondary:black;" id="blue"></button>
-            <button type="button" class="submit-color-button" style="--theme-primary:#038B30; --theme-secondary:#013D15;" id="green"></button>
-            <button type="button" class="submit-color-button" style="--theme-primary:#A16AE8; --theme-secondary:#BEAFC2;" id="purple"></button>
+	    <button type="button" class="submit-color-button" style="--theme-primary:orange; --theme-secondary:white; --theme-text:black;" id="light"></button>
+            <button type="button" class="submit-color-button active" style="--theme-primary:#1f5297; --theme-secondary:black; --theme-text:lightgrey;" id="dark"></button>
 	  </div>
           <div class="card-footer clearfix" style="height:38px">
 	  </div>
