Added tips to results page

--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -11,6 +11,16 @@ SPDX-License-Identifier: AGPL-3.0-only
   <div class="container">
     <div class="row">
       <div class="col-md-10 mb-5">
+        {% if internal_message %}
+        <div id="sidebar-wrapper">
+          <div class="alert alert-info alert-dismissible">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+	    <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="40px" style="margin-right:10px">
+             {{internal_message|safe}}
+	    </div>
+          </div>
+        </div>
+        {% endif %}
       <form  action="{{url_for('search.index')}}" id='searchform'>
         <div class="input-group group mt-4" >
 	  <input class="form-control" title="Enter your search query." placeholder="{{gettext('Enter your search query')}}"  type="search" name='q' required>
@@ -24,7 +34,6 @@ SPDX-License-Identifier: AGPL-3.0-only
     </div>
     <div class="row">
       <div class="col-md-8">
-      <h3>Search results:</h3>
 	{% if results == None %}
 	  <p><img src="{{ url_for('static', filename='sad_pears.png')}}" width="50px"/></p>
 	  <p>{{gettext('<b>No results found.</b><br> The reason for this could be that the topic of this PeARS instance is not aligned with your query. 
@@ -32,6 +41,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 	  on your topic.')}}</p>
 	  <br><p>{{gettext('No account yet?')}} <a href={{url_for('auth.signup')}}>{{gettext('Sign up')}}</a></p>
 	{% else %}
+        <h3>Search results:</h3>
         {% for result in results %}
         <div class="card mt-2">
           <div class="card-body" style="padding: 20px 0px 20px 0px">
@@ -63,16 +73,6 @@ SPDX-License-Identifier: AGPL-3.0-only
         {% endfor %}
         {% endif %}
         </div>
-      </div>
-      <div class="col-sm-2 d-none d-md-block">
-        {% if internal_message %}
-        <div id="sidebar-wrapper">
-          <div class="alert alert-info alert-dismissible">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            {{internal_message|safe}}
-          </div>
-        </div>
-        {% endif %}
       </div>
     </div>
   </div>
