--- a/app/templates/admin/pears_list.html
+++ b/app/templates/admin/pears_list.html
@@ -31,12 +31,12 @@ SPDX-License-Identifier: AGPL-3.0-only
       <ul class="nav navbar-nav">
         <li><a href="{{url_for('search.index')}}">Search</a></li>
         <li><a href="{{url_for('indexer.index')}}">Indexer</a></li>
-        <li><a href="{{url_for('orchard.index')}}">My orchard</a></li>
+        <li><a href="{{url_for('orchard.index')}}">Themes</a></li>
         <li><a href="{{url_for('admin.index')}}">DB admin</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{url_for('settings.index')}}">Profile</a></li>
         <li><a href="{{url_for('pages.return_faq')}}">F.A.Q.</a></li>
-        <li><a href="{{url_for('pages.return_acknowledgements')}}">Acknowledgments</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
