--- a/app/templates/pages/acknowledgements.html
+++ b/app/templates/pages/acknowledgements.html
@@ -7,7 +7,8 @@
        <h3>Acknowledgements</h3>
        <p>We are grateful to the creators of the following resources:</p>
        <ul>
-       <li>The PeARS logo, beautifully designed by <a href="https://www.behance.net/orioncreatives">Orion Chambadiyil</a>.
+       <li>The PeARS logo, beautifully designed by Orion Chambadiyil.
+       <li>The open-source icons offred by <a href="https://ionic.io/ionicons">Ionic</a>.
        </ul>
        </div>
   </div> <!-- /row -->
