Added all user contributions to the profile page, with deletion functions

--- a/app/templates/settings/index.html
+++ b/app/templates/settings/index.html
@@ -38,26 +38,36 @@ SPDX-License-Identifier: AGPL-3.0-only
 
   <div class="row p-3">
   <div class="card">
-	  <div class="card-header text-center"><b>{{gettext("Your contributions")}}</b></div>
-         <div class="card-body">
-	{% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="notification is-danger">
-		    <br><b>{{ messages[0] }}</b>
-            </div>
-        {% endif %}
-        {% endwith %}
-         {% for url in contributions %}
-	 <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_url')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete this URL')}}"><span class="results-emoji">  🗑️</span></a>
-         <br>
+    <div class="card-header text-center"><b>{{gettext("Your contributions")}}</b></div>
+      <div class="card-body">
+ 
+         {% with messages = get_flashed_messages() %}
+         {% if messages %}
+            <div class="notification is-danger"><br><b>{{ messages[0] }}</b></div>
+         {% endif %}
+         {% endwith %}
+         <hr>
+        
+	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Web content</h5></div><hr>
+	 {% for url in contributions %}
+	 <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_url')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete this URL')}}" onclick="return confirm('Are you sure you want to delete this resource?')"> <ion-icon name="trash-outline"></ion-icon></a><br>
+         {% endfor %}
+         <hr>
+
+	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Tips</h5></div><hr>
+	 {% for url in tips %}
+	 <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_url')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete this tip')}}" onclick="return confirm('Are you sure you want to delete this resource?')"> <ion-icon name="trash-outline"></ion-icon></a><br>
+         {% endfor %}
+         <hr>
+
+	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Comments</h5></div><hr>
+	 {% for url in comments %}
+	 {{url[1]}}<br> <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_comment')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete comments for this URL')}}" onclick="return confirm('Are you sure you want to delete all your comments for this URL?')"> <ion-icon name="trash-outline"></ion-icon></a><br><br>
          {% endfor %}
          </div>
        </div>
+      </div>
     </div>
-
-  </div>
   </div>
 
-
-</div><!-- /.container -->
 {% endblock %}
