--- a/app/templates/search/index.html
+++ b/app/templates/search/index.html
@@ -12,7 +12,11 @@ SPDX-License-Identifier: AGPL-3.0-only
       {% if own_brand %}
       <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='assets/logo.png')}}"></a>
       {% else %}
-      <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='pears-logo.png')}}"></a>
+	{% if session.get('theme') == 'dark' %}
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='pears-logo-dark.png')}}"></a>
+	{% else %}
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='pears-logo.png')}}"></a>
+	{% endif %}
       {% endif %}
       <form  action="{{url_for('search.index')}}" id='searchform'>
         <div class="input-group group mt-4" >
