--- a/app/templates/settings/index.html
+++ b/app/templates/settings/index.html
@@ -21,19 +21,6 @@ SPDX-License-Identifier: AGPL-3.0-only
         </form>
       </div>
 
-      <div class="card">
-	      <div class="card-header text-center"><b>{{gettext("Color scheme")}}</b></div>
-          <div class="card-body">
-		  <p>{{gettext("Change your color scheme by clicking on the options below.")}}</p>
-	    <button type="button" class="submit-color-button" style="--theme-primary:orange; --theme-secondary:white; --theme-text:black;" id="light"></button>
-            <button type="button" class="submit-color-button active" style="--theme-primary:#1f5297; --theme-secondary:black; --theme-text:lightgrey;" id="dark"></button>
-	  </div>
-          <div class="card-footer clearfix" style="height:38px">
-	  </div>
-        </div>
-      </div>
-     </div>
-
     </div>
 
   <div class="row p-3">
@@ -48,19 +35,31 @@ SPDX-License-Identifier: AGPL-3.0-only
          {% endwith %}
          <hr>
         
-	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Web content</h5></div><hr>
+	 {% if session.get('theme') == 'dark' %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears_dark.png')}}" width="30px"><h5>Web content</h5></div><hr>
+	 {% else %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Web content</h5></div><hr>
+         {% endif %}
 	 {% for url in contributions %}
 	 <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_url')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete this URL')}}" onclick="return confirm('Are you sure you want to delete this resource?')"> <ion-icon name="trash-outline"></ion-icon></a><br>
          {% endfor %}
          <hr>
 
-	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Tips</h5></div><hr>
+	 {% if session.get('theme') == 'dark' %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears_dark.png')}}" width="30px"><h5>Tips</h5></div><hr>
+	 {% else %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Tips</h5></div><hr>
+         {% endif %}
 	 {% for url in tips %}
 	 <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_url')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete this tip')}}" onclick="return confirm('Are you sure you want to delete this resource?')"> <ion-icon name="trash-outline"></ion-icon></a><br>
          {% endfor %}
          <hr>
 
-	 <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Comments</h5></div><hr>
+	 {% if session.get('theme') == 'dark' %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears_dark.png')}}" width="30px"><h5>Comments</h5></div><hr>
+	 {% else %}
+	   <div class="d-flex justify-content-start"><img src="{{ url_for('static', filename='happy_pears.png')}}" width="30px"><h5>Comments</h5></div><hr>
+         {% endif %}
 	 {% for url in comments %}
 	 {{url[1]}}<br> <a href='{{url[0]}}'>{{url[0]}}</a><a href='{{url_for('settings.delete_comment')}}?url={{url[0]}}' data-toggle="tooltip" title="{{gettext('Delete comments for this URL')}}" onclick="return confirm('Are you sure you want to delete all your comments for this URL?')"> <ion-icon name="trash-outline"></ion-icon></a><br><br>
          {% endfor %}
