Added sitename to .env for populating privacy, tos and contact pages.

--- a/app/templates/pages/contact.html
+++ b/app/templates/pages/contact.html
@@ -6,7 +6,8 @@
     <div class="col-md-6">
        <h3>Contact</h3>
 
-         Coming soon!
+       <p>Any question, comment, or complaint about this PeARS instance? Let us help you!</p> 
+       <p>Contact us at {{email}}.</p>
        </div>
   </div> <!-- /row -->
 </div> <!-- /container full -->
