--- a/app/templates/pages/tos.html
+++ b/app/templates/pages/tos.html
@@ -7,11 +7,12 @@
        <h3>Terms of Service</h3>
 
        <p>Welcome to PeARS!</p>
-       <p>These Terms of Service (or 'Terms') govern your use of PeARS, except where we state that other terms apply. They also provide information about the PeARS Service (the 'Service'). When you create a PeARS account or use PeARS on SITENAME ('this Site'), you agree to these terms.</p>
+       <p>These Terms of Service (or 'Terms') govern your use of PeARS, except where we state that other terms apply. They also provide information about the PeARS Service (the 'Service'). When you create a PeARS account or use PeARS on {{sitename}} ('this Site'), you agree to these terms.</p>
 
-       <p>The PeARS Service on this Site is provided by ORGANISATION. These Terms of Service constitute an agreement between yourself and COMPANY.</p>
+       <p>The PeARS Service on this Site is provided by {{sitename}}. These Terms of Service constitute an agreement between yourself and {{sitename}}.</p>
 
        <h4>Impressum</h4>
+       <p>If you need to contact us, you can do so via the email address listed on our <a href="{{url_for('pages.return_contact')}}">contact page</a>.
 
        <h4>Funding</h4>
        <p>There are no ads on this Site. We rely on donations to provide the Service.</p> 
