--- a/app/templates/pages/privacy.html
+++ b/app/templates/pages/privacy.html
@@ -5,12 +5,12 @@
   <div class="row">
        <div class="col-md-6">
        <h3>Our privacy policy</h3>
-       <p>This privacy policy describes how <i>SITENAME</i> ("SITENAME", "we", "us") collects, protects and uses the personally identifiable information you may provide through the <i>SITENAME</i> website or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>SITENAME</i> does not own or control, or to individuals that <i>SITENAME</i> does not employ or manage.</p>
+       <p>This privacy policy describes how <i>{{sitename}}</i> ("{{sitename}}", "we", "us") collects, protects and uses the personally identifiable information you may provide through the <i>{{sitename}}</i> website or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>{{sitename}}</i> does not own or control, or to individuals that <i>{{sitename}}</i> does not employ or manage.</p>
 
        <h4>What information do we collect?</h4>
        <p>Basic account information: If you register on this server, you may be asked to enter a username, an e-mail address and a password. You may also be able to enter additional profile information such as a display name and biography, and upload a profile picture and header image. The username, display name, biography, profile picture and header image are always listed publicly.</p>
 
-       <p>Contributions and other public information: When you submit a URL or a comment to the <i>SITENAME</i> index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly.</p> 
+       <p>Contributions and other public information: When you submit a URL or a comment to the <i>{{sitename}}</i> index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly.</p> 
 
        <p>IPs and other metadata: When you log in, we record the IP address you log in from, as well as the name of your browser application. All the logged in sessions are available for your review and revocation in the settings. The latest IP address used is stored for up to 12 months. We also may retain server logs which include the IP address of every request to our server.</p>
 
