--- a/app/templates/pages/acknowledgements.html
+++ b/app/templates/pages/acknowledgements.html
@@ -8,7 +8,7 @@
        <p>We are grateful to the creators of the following resources:</p>
        <ul>
        <li>The PeARS logo, beautifully designed by Orion Chambadiyil.
-       <li>The open-source icons offred by <a href="https://ionic.io/ionicons">Ionic</a>.
+       <li>The open-source icons offered by <a href="https://ionic.io/ionicons">Ionic</a>.
        </ul>
        </div>
   </div> <!-- /row -->
