--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -91,9 +91,9 @@ SPDX-License-Identifier: AGPL-3.0-only
 
 <script>
   let themes = {{themes|safe}};
-  let str = "";
+  let str = '';
   for (theme of themes) {
-    str += "<option value=" + theme + " />";
+    str += '<option value="' + theme + '" />';
   }
   document.getElementById("themes").innerHTML = str;
 </script>
